tests/ui/imports/issue-85992.stderr
error[E0432]: unresolved import `crate::empty`
  --> $DIR/issue-85992.rs:8:5
   |
LL | use crate::empty;
   |     ^^^^^^^^^^^^ no `empty` in the root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
